--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="images/Untitled.png" />
+  <link rel="icon" type="image/x-icon" href="images/Untitled.PNG" />
   <title>My Studio</title>
   <style>
     /* Background canvas setup */
