--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
   <!-- Canvas background -->
   <canvas id="bg-canvas"></canvas>
 
-  <h1>Welcome to Ramsey's Studio</h1>
-  <h3>Online Studio Website For Art.</h3>
-  <p>this is a website for Ramsey Greavett's Art.</p>
+  <h1>Welcome to Lost Files</h1>
+  <h3>Online Site For Leaks.</h3>
+  <p>this is a website for Hiphop/Rap related leaks and news.</p>
 
   <div class="text-block">
-    Add an option to go to a notepad page, where it's a grid and you can easily write down your notes/ideas, and export them. You should also be able to import your exports.
+    
   </div>
 
-  <p><a href="page2.html">Go to my studio  →</a></p>
+  <p><a href="page2.html">Go to The Lost Files  →</a></p>
 
   <!-- Background animation script -->
   <script>
