--- a/page2.html
+++ b/page2.html
@@ -70,13 +70,13 @@
 </head>
 <body>
   <h1>Gallery</h1>
-  <p>This is a gallery of Ideas, Music and Art</p>
+  <p>Music, Art, Youtube, News, Chat</p>
   <p><a href="index.html">← Back to home</a></p>
 
   <div class="image-grid">
     <a href="page3.html"><img src="images/Untitled.jpg" alt="Image 1"></a>
     <a href="page4.html"><img src="images/Untitled (2).jpg" alt="Image 2"></a>
-    <a href="https://www.youtube.com/@Ramsey-v2w"><img src="images/Capture.PNG" alt="Image 3"></a>
+    <a href="https://www.youtube.com/@00GOON-00"><img src="images/Capture.PNG" alt="Image 3"></a>
     <a href="page6.html"><img src="images/Untitled (1).jpg" alt="Image 4"></a>
     <a href="page7.html"><img src="images/Capture2.PNG" alt="Image 5"></a>
   </div>
