--- a/page3.html
+++ b/page3.html
@@ -108,28 +108,16 @@
     <div class="project-grid">
       <div class="project">
         <img src="images/download.jpg" alt="Leak 1" />
-        <a href="https://mega.nz/folder/PVIGwCrS#PJ50Z5UtdPvYsZQPSFiXeQ" target="_blank">Opium Label Unreleased Albums</a>
+        <a href="https://mega.nz/folder/n5Zj0ITS#nJIpWtvVRUgibMrqgZvsxw" target="_blank">Opium Label Unreleased Albums</a>
       </div>
       <div class="project">
         <img src="images/AW.jpeg" alt="Leak 2" />
-        <a href="https://mega.nz/folder/nMYx2KBY#Dlv7t2ec5sNqdJTK0VD1Aw" target="_blank">Lil Uzi Vert Unreleased Albums</a>
-      </div>
-      <div class="project">
-        <img src="images/WZRD.jpg" alt="Leak 3" />
-        <a href="https://mega.nz/folder/doRWEKbZ#3Mis7L0BPRhYQeif9pLNzw" target="_blank">Future Unreleased Albums</a>
-      </div>
-      <div class="project">
-        <img src="images/US.jpg" alt="Leak 4" />
-        <a href="https://mega.nz/folder/04xTSLYQ#h6AhK5uPFfMm2_xDOFq_Rw" target="_blank">Young Thug Unreleased Albums</a>
+        <a href="https://mega.nz/folder/X9wT2R5b#uMx5gmQNwnaXWB_tu53afA" target="_blank">Lil Uzi Vert Unreleased Albums</a>
       </div>
       <div class="project">
         <img src="images/s-l1200.jpg" alt="Leak 5" />
-        <a href="https://mega.nz/folder/N8p3VYRZ#qP4IO5qRNIETO3T90iH3GQ" target="_blank">Cactus Jack Label Unreleased albums</a>
-      </div>
-      <div class="project">
-        <img src="images/DOD3.jpg" alt="Leak 6" />
-        <a href="https://mega.nz/folder/g1RzSaJK#T-XEhTSzYTk9O4TRzJvLLg" target="_blank">Gunna Unreleased Albums</a>
-      </div>       
+        <a href="https://mega.nz/folder/jxhgkBCQ#Xslc2_P5fc6HE7_u9oSlTA" target="_blank">Cactus Jack Label Unreleased albums</a>
+      </div>     
     </div>
   </div>
   <!--line 129 -132 is what you want to copy to add a new one
