--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <title>Gallery</title>
   <style>
     :root {
-      --bg-color: #f2f2f2;
+      --bg-color: #f7d422;
     }
 
     html, body {
@@ -15,7 +15,7 @@
       overflow: hidden;
       height: 100%;
       font-family: monospace;
-      color: #f2f2f2;
+      color: #f7d422;
     }
 
     body {
